# openGL_effects

./: .travis.yml  CMakeLists.txt  INSTALL  IO_old.c  README  README.md  drawing.cpp  main.cpp  mirror.cpp  multitexturing.cpp  openGL_effects_path.h.in  sphere_mapping.cpp  textures.cpp
libs/bitmap/: Bitmap.cpp
rtg/: dog_old.rtg
